--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-google-fonts": "^1.2.1",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "reactjs-localstorage": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
